<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_wave">

    </View>

    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_wave2">
    </View>
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/risktitle"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:id="@+id/ll_info"
        android:layout_below="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginVertical="10dp"
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_light"
            android:drawableStart="@drawable/ic_alert"
            android:layout_marginEnd="20dp"
            android:text="@string/riskmsg1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@drawable/background_text"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/tv_message2"
            android:fontFamily="@font/poppins_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_alert"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/riskmsg2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@drawable/background_text"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll_info"
        android:id="@+id/ll_quesiton"
        android:layout_above="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_question"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:id="@+id/ll_buttons"
        android:layout_marginHorizontal="10dp"
        android:layout_above="@+id/rl_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/btn_yes"
            android:text="@string/often"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/anarenk"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_button"/>

        <Button
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:textAllCaps="false"
            android:id="@+id/btn_som"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sometimes"
            android:textColor="@color/anarenk"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_button"/>

        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/rarely"
            android:textColor="@color/anarenk"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_button"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/rl_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:id="@+id/btn_pre"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/pre"
            android:drawableStart="@drawable/ic_back"
            android:textColor="@color/anarenk"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_button"/>
    </RelativeLayout>
</RelativeLayout>