<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_wave">

    </View>

    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_wave2">
    </View>

    <LinearLayout
        android:id="@+id/ll_im"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_marginTop="18dp"
            android:id="@+id/im_info"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/corona"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_koronapp"/>

    <LinearLayout
        android:layout_below="@+id/ll_im"
        android:layout_above="@+id/im_loginname"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="60dp">

        <EditText
            android:id="@+id/input_fullname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_medium"
            android:ems="10"
            android:hint="@string/hintname"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/im_loginname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_light"
        android:paddingHorizontal="5dp"
        android:text="@string/logininfo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp" />

</RelativeLayout>